feat: update the package.json

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lint-staged": "lint-staged"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.34.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0"
   }
