--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kaivanwong/eslint",
+  "name": "@kaivanwong/eslint-config",
   "version": "0.0.0",
   "description": "Kaivanwong's ESLint config presets",
   "author": "Kaivan Wong <kaivanwong@outlook.com>",
@@ -18,7 +18,7 @@
   },
   "packageManager": "pnpm@7.21.0",
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
+    "*.{js,ts}": [
       "eslint"
     ]
   },
@@ -28,7 +28,10 @@
     "lint-staged": "lint-staged"
   },
   "devDependencies": {
+    "@kaivanwong/eslint-config": "*",
     "husky": "^8.0.3",
-    "lint-staged": "^13.1.0"
+    "lint-staged": "^13.1.0",
+    "eslint": "^8.31.0",
+    "typescript": "^4.9.4"
   }
 }
