--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"moduleResolution": "node"
 	},
 	"include": [
-		"./packages/**/*.ts"
+		"./packages/**/*.ts",
 	],
 	"exclude": [
 		"./fixtures/**/*.*"
