--- a/package.json
+++ b/package.json
@@ -17,19 +17,13 @@
     "url": "https://github.com/kaivanwong/eslint-config/issues"
   },
   "packageManager": "pnpm@7.21.0",
-  "lint-staged": {
-    "*.{js,ts}": [
-      "eslint"
-    ]
-  },
-  "main": "src/index.ts",
+  "main": "src/index.js",
   "files": [
-    "src/index.ts"
+    "src/index.js"
   ],
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "lint-staged": "lint-staged",
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "peerDependencies": {
@@ -40,8 +34,6 @@
     "@kaivanwong/eslint-config-core": "workspace:*",
     "bumpp": "^8.2.1",
     "eslint": "^8.32.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.1.0",
     "typescript": "^4.9.4"
   }
 }
