--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "@kaivanwong/eslint-config-core",
+	"name": "@kaivanwong/eslint-config-all",
 	"version": "0.2.0",
 	"description": "Kaivanwong's ESLint config presets",
 	"author": "Kaivan Wong <kaivanwong@outlook.com>",
 	"keywords": [
 		"kaivanwong",
 		"eslint",
-		"core"
+		"all"
 	],
 	"license": "MIT",
 	"homepage": "https://github.com/kaivanwong/eslint#readme",
@@ -19,24 +19,23 @@
 	},
 	"main": "index.js",
 	"files": [
-		"*.js"
+		"index.js"
 	],
-	"scripts": {
-		"lint": "eslint . --config=index.js"
-	},
 	"peerDependencies": {
 		"eslint": ">=7.4.0"
 	},
 	"dependencies": {
+		"@kaivanwong/eslint-config-core": "workspace:*",
+		"@typescript-eslint/eslint-plugin": "^5.48.0",
+		"@typescript-eslint/parser": "^5.48.0",
 		"eslint-plugin-eslint-comments": "^3.2.0",
 		"eslint-plugin-html": "^7.1.0",
 		"eslint-plugin-import": "^2.26.0",
 		"eslint-plugin-jsonc": "^2.6.0",
-		"eslint-plugin-markdown": "^3.0.0",
 		"eslint-plugin-n": "^15.6.0",
-		"eslint-plugin-no-only-tests": "^3.1.0",
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-unicorn": "^45.0.2",
+		"eslint-plugin-vue": "^9.8.0",
 		"eslint-plugin-yml": "^1.4.0",
 		"jsonc-eslint-parser": "^2.1.0",
 		"yaml-eslint-parser": "^1.1.0"
