--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kaivanwong/eslint-config-monorepo",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Kaivanwong's ESLint config presets",
   "author": "Kaivan Wong <kaivanwong@outlook.com>",
   "keywords": [
@@ -23,7 +23,7 @@
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@kaivanwong/eslint-config": "*",
+    "@kaivanwong/eslint-config": "^0.2.1",
     "bumpp": "^8.2.1",
     "eslint": "^8.32.0",
     "typescript": "^4.9.4"
