--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@kaivanwong/eslint-config": "^0.2.3",
+    "@kaivanwong/eslint-config": "*",
     "bumpp": "^8.2.1",
     "eslint": "^8.32.0",
     "typescript": "^4.9.4"
