--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -37,7 +37,8 @@
 		"eslint-plugin-vue": "^9.8.0",
 		"eslint-plugin-yml": "^1.4.0",
 		"jsonc-eslint-parser": "^2.1.0",
-		"yaml-eslint-parser": "^1.1.0"
+		"yaml-eslint-parser": "^1.1.0",
+		"local-pkg": "^0.4.2"
 	},
 	"devDependencies": {
 		"eslint": "^8.32.0"
