--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "local-pkg": "^0.4.2"
   },
   "devDependencies": {
