fix : update dependencies

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@kaivanwong/eslint-config": "*",
+    "@kaivanwong/eslint-config": "workspace:*",
     "bumpp": "^8.2.1",
-    "eslint": "^8.32.0",
-    "typescript": "^4.9.4"
+    "eslint": "^8.33.0",
+    "typescript": "^4.9.5"
   }
 }
