--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -39,6 +39,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^45.0.2",
     "eslint-plugin-vue": "^9.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-yml": "^1.4.0",
     "jsonc-eslint-parser": "^2.1.0",
     "local-pkg": "^0.4.2",
