--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "devDependencies": {
     "@kaivanwong/eslint-config": "workspace:*",
     "bumpp": "^8.2.1",
-    "eslint": "^8.33.0",
-    "typescript": "^4.9.5"
+    "eslint": "^8.33.0"
   }
 }
