chore: release v0.8.11-beta.0

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@kaivanwong/eslint-config-monorepo",
-  "version": "0.8.10",
-  "packageManager": "pnpm@7.21.0",
+  "version": "0.8.11-beta.0",
   "description": "Kaivanwong's ESLint config presets",
   "author": "Kaivan Wong <kaivanwong@outlook.com>",
   "license": "MIT",
@@ -17,6 +16,7 @@
     "kaivanwong",
     "eslint-config"
   ],
+  "packageManager": "pnpm@7.21.0",
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
