--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   ],
   "packageManager": "pnpm@7.21.0",
   "scripts": {
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint ./",
+    "lint:fix": "eslint ./ --fix",
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
