feat: add nest plugins

--- a/packages/eslint-config-nest/package.json
+++ b/packages/eslint-config-nest/package.json
@@ -28,6 +28,7 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
+    "@darraghor/eslint-plugin-nestjs-typed": "^3.18.0",
     "local-pkg": "^0.4.2"
   },
   "devDependencies": {
