--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -31,9 +31,10 @@
     "@kaivanwong/eslint-config-base": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
+    "@typescript-eslint/utils": "^5.50.0",
     "eslint-plugin-jest": "^27.2.1"
   },
   "devDependencies": {
-    "eslint": "^8.32.0"
+    "eslint": "^8.33.0"
   }
 }
