--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "devDependencies": {
     "@kaivanwong/eslint-config": "workspace:*",
     "bumpp": "^8.2.1",
-    "eslint": "^8.33.0"
+    "eslint": "^8.33.0",
+    "eslint-plugin-antfu": "^0.35.2",
+    "typescript": "^4.9.5"
   }
 }
