feat: add local-pkg

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -24,6 +24,7 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
+    "local-pkg": "^0.4.3",
     "@kaivanwong/eslint-config-base": "workspace:*",
     "@kaivanwong/eslint-config-ts": "workspace:*",
     "@kaivanwong/eslint-config-nest": "workspace:*",
