fix: update sort

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,37 +1,37 @@
 {
+  "author": "Kaivan Wong <kaivanwong@outlook.com>",
+  "description": "Kaivanwong's ESLint config presets",
+  "homepage": "https://github.com/kaivanwong/eslint-config#readme",
+  "license": "MIT",
+  "main": "index.js",
   "name": "@kaivanwong/eslint-config",
   "version": "0.12.3",
-  "description": "Kaivanwong's ESLint config presets",
-  "author": "Kaivan Wong <kaivanwong@outlook.com>",
-  "license": "MIT",
-  "homepage": "https://github.com/kaivanwong/eslint-config#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kaivanwong/eslint-config.git"
-  },
   "bugs": {
     "url": "https://github.com/kaivanwong/eslint-config/issues"
   },
+  "dependencies": {
+    "@kaivanwong/eslint-config-base": "workspace:*",
+    "@kaivanwong/eslint-config-nest": "workspace:*",
+    "@kaivanwong/eslint-config-react": "workspace:*",
+    "@kaivanwong/eslint-config-ts": "workspace:*",
+    "@kaivanwong/eslint-config-vue": "workspace:*",
+    "local-pkg": "^0.4.3"
+  },
+  "devDependencies": {
+    "eslint": "^8.33.0"
+  },
+  "files": [
+    "index.js"
+  ],
   "keywords": [
     "kaivanwong",
     "eslint-config"
   ],
-  "main": "index.js",
-  "files": [
-    "index.js"
-  ],
   "peerDependencies": {
     "eslint": ">=7.4.0"
   },
-  "dependencies": {
-    "local-pkg": "^0.4.3",
-    "@kaivanwong/eslint-config-base": "workspace:*",
-    "@kaivanwong/eslint-config-ts": "workspace:*",
-    "@kaivanwong/eslint-config-nest": "workspace:*",
-    "@kaivanwong/eslint-config-react": "workspace:*",
-    "@kaivanwong/eslint-config-vue": "workspace:*"
-  },
-  "devDependencies": {
-    "eslint": "^8.33.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kaivanwong/eslint-config.git"
   }
 }
