--- a/packages/eslint-config-nest/package.json
+++ b/packages/eslint-config-nest/package.json
@@ -27,7 +27,10 @@
   "peerDependencies": {
     "eslint": ">=7.4.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@kaivanwong/eslint-config-base": "workspace:*",
+    "@kaivanwong/eslint-config-ts": "workspace:*"
+  },
   "devDependencies": {
     "eslint": "^8.33.0"
   }
