--- a/packages/eslint-config-vue/package.json
+++ b/packages/eslint-config-vue/package.json
@@ -28,10 +28,12 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
+    "@kaivanwong/eslint-config-base": "workspace:*",
+    "@kaivanwong/eslint-config-ts": "workspace:*",
     "eslint-plugin-vue": "^9.9.0",
     "local-pkg": "^0.4.3"
   },
   "devDependencies": {
-    "eslint": "^8.33.0"
+    "eslint": "^8.34.0"
   }
 }
