--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@kaivanwong/eslint-config-monorepo",
   "version": "0.12.13",
+  "private": true,
   "packageManager": "pnpm@7.21.0",
   "description": "Kaivanwong's ESLint config presets",
   "author": "Kaivan Wong <kaivanwong@outlook.com>",
@@ -24,7 +25,7 @@
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@kaivanwong/eslint-config": "workspace:*",
+    "@kaivanwong/eslint-config": "*",
     "bumpp": "^8.2.1",
     "eslint": "^8.34.0",
     "typescript": "^4.9.5"
