--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepare": "pnpm -r run stub",
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@kaivanwong/eslint-config": "*",
+    "@kaivanwong/eslint-config": "workspace:^0.12.14",
     "bumpp": "^8.2.1",
     "eslint": "^8.34.0",
     "typescript": "^4.9.5"
