--- a/packages/eslint-config-vue/package.json
+++ b/packages/eslint-config-vue/package.json
@@ -17,16 +17,14 @@
     "eslint-config",
     "vue"
   ],
-  "main": "./index.js",
+  "main": "index.js",
   "files": [
-    "*.js"
+    "index.js"
   ],
   "peerDependencies": {
     "eslint": ">=7.4.0"
   },
   "dependencies": {
-    "@kaivanwong/eslint-config-base": "workspace:*",
-    "@kaivanwong/eslint-config-ts": "workspace:*",
     "eslint-plugin-vue": "^9.9.0",
     "local-pkg": "^0.4.3"
   },
