--- a/packages/eslint-config-nest/package.json
+++ b/packages/eslint-config-nest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kaivanwong/eslint-config-nest",
-  "version": "0.12.14",
+  "version": "0.12.15",
   "description": "Kaivanwong's ESLint config presets",
   "author": "Kaivan Wong <kaivanwong@outlook.com>",
   "license": "MIT",
@@ -24,8 +24,7 @@
   "peerDependencies": {
     "eslint": ">=7.4.0"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^8.34.0"
   }
