--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@kaivanwong/eslint-config": "*",
+    "@kaivanwong/eslint-config": "^0.12.25",
     "bumpp": "^8.2.1",
-    "eslint": "^8.34.0",
-    "typescript": "^4.9.5"
+    "eslint": "^8.34.0"
   }
 }
