--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@kaivanwong/eslint-config": "^0.12.25",
+    "@kaivanwong/eslint-config": "workspace:^0.12.26",
     "bumpp": "^8.2.1",
     "eslint": "^8.34.0"
   }
