--- a/packages/eslint-config-base/package.json
+++ b/packages/eslint-config-base/package.json
@@ -17,7 +17,7 @@
     "eslint-config",
     "base"
   ],
-  "main": "./index.js",
+  "main": "index.js",
   "files": [
     "*.js"
   ],
@@ -39,8 +39,5 @@
     "eslint-plugin-yml": "^1.5.0",
     "jsonc-eslint-parser": "^2.1.0",
     "yaml-eslint-parser": "^1.1.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.34.0"
   }
 }
