--- a/packages/eslint-config-nest/package.json
+++ b/packages/eslint-config-nest/package.json
@@ -17,15 +17,11 @@
     "eslint-config",
     "nest"
   ],
-  "main": "./index.js",
+  "main": "index.js",
   "files": [
-    "*.js"
+    "index.js"
   ],
   "peerDependencies": {
     "eslint": ">=7.4.0"
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "eslint": "^8.34.0"
   }
 }
