--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -17,9 +17,9 @@
     "eslint-config",
     "react"
   ],
-  "main": "./index.js",
+  "main": "index.js",
   "files": [
-    "*.js"
+    "index.js"
   ],
   "peerDependencies": {
     "eslint": ">=7.4.0"
@@ -28,8 +28,5 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "local-pkg": "^0.4.3"
-  },
-  "devDependencies": {
-    "eslint": "^8.34.0"
   }
 }
