--- a/packages/eslint-config-ts/package.json
+++ b/packages/eslint-config-ts/package.json
@@ -17,9 +17,9 @@
     "eslint-config",
     "ts"
   ],
-  "main": "./index.js",
+  "main": "index.js",
   "files": [
-    "*.js"
+    "index.js"
   ],
   "peerDependencies": {
     "eslint": ">=7.4.0",
@@ -29,10 +29,6 @@
     "@kaivanwong/eslint-config-base": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
-    "eslint-plugin-jest": "^27.2.1",
-    "typescript": "^4.9.5"
-  },
-  "devDependencies": {
-    "eslint": "^8.34.0"
+    "eslint-plugin-jest": "^27.2.1"
   }
 }
