--- a/package.json
+++ b/package.json
@@ -2,30 +2,21 @@
   "name": "@kaivanwong/eslint-config-monorepo",
   "version": "0.13.0-beta.0",
   "private": true,
-  "packageManager": "pnpm@7.21.0",
-  "description": "Kaivanwong's ESLint config presets",
-  "author": "Kaivan Wong <kaivanwong@outlook.com>",
+  "packageManager": "pnpm@7.1.0",
+  "author": "Kaivan Wong <kaivanwong@outlook.com> (https://github.com/kaivanwong)",
   "license": "MIT",
-  "homepage": "https://github.com/kaivanwong/eslint-config#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kaivanwong/eslint-config.git"
-  },
-  "bugs": {
-    "url": "https://github.com/kaivanwong/eslint-config/issues"
-  },
-  "keywords": [
-    "kaivanwong",
-    "eslint-config"
-  ],
   "scripts": {
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "test": "pnpm -r run test",
+    "prepare": "pnpm -r run stub",
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@kaivanwong/eslint-config": "workspace:^0.12.27",
+    "@kaivanwong/eslint-config": "*",
     "bumpp": "^8.2.1",
-    "eslint": "^8.34.0"
+    "eslint": "^8.33.0",
+    "eslint-plugin-kaivanwong": "workspace:*",
+    "rimraf": "^4.1.2",
+    "typescript": "^4.9.5"
   }
 }
