--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@kaivanwong/eslint-config": "*",
     "bumpp": "^8.2.1",
     "eslint": "^8.33.0",
-    "eslint-plugin-kaivanwong": "workspace:*",
+    "eslint-plugin-antfu": "0.35.2",
     "rimraf": "^4.1.2",
     "typescript": "^4.9.5"
   }
