--- a/packages/all/package.json
+++ b/packages/all/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@kaivanwong/eslint-config",
   "version": "0.13.0-beta.1",
-  "description": "Anthony's ESLint config",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/kaivanwong/)",
+  "description": "Kaivanwong's ESLint config presets",
+  "author": "Kaivan Wong <kaivanwong@outlook.com> (https://github.com/kaivanwong)",
   "license": "MIT",
   "homepage": "https://github.com/kaivanwong/eslint-config",
   "keywords": [
