--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kaivanwong/eslint-config-basic",
+  "name": "@kaivanwong/eslint-config-base",
   "version": "0.13.0-beta.1",
   "description": "",
   "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/kaivanwong/)",
@@ -19,7 +19,7 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
-    "eslint-plugin-kaivanwong": "workspace:*",
+    "eslint-plugin-antfu": "0.35.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.27.5",
