--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@kaivanwong/eslint-config": "0.13.0-beta.1",
+    "@kaivanwong/eslint-config": "*",
     "bumpp": "^8.2.1",
     "eslint": "^8.34.0",
-    "eslint-plugin-antfu": "0.35.2",
-    "rimraf": "^4.1.2",
-    "typescript": "^4.9.5"
+    "eslint-plugin-antfu": "0.35.2"
   }
 }
