--- a/package.json
+++ b/package.json
@@ -7,13 +7,11 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint .",
-    "test": "pnpm -r run test",
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
     "@kaivanwong/eslint-config": "*",
     "bumpp": "^8.2.1",
-    "eslint": "^8.34.0",
-    "eslint-plugin-antfu": "0.35.2"
+    "eslint": "^8.34.0"
   }
 }
