--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "@kaivanwong/eslint-config-monorepo",
-  "version": "0.13.0-beta.7",
+  "version": "0.13.0-beta.6",
   "private": true,
   "packageManager": "pnpm@7.1.0",
   "author": "Kaivan Wong <kaivanwong@outlook.com> (https://github.com/kaivanwong)",
   "license": "MIT",
   "scripts": {
     "lint": "eslint .",
+    "test": "pnpm -r run test",
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
     "@kaivanwong/eslint-config": "*",
     "bumpp": "^8.2.1",
-    "eslint": "^8.34.0"
+    "eslint": "^8.34.0",
+    "typescript": "^4.9.5"
   }
 }
