--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,10 +1,17 @@
 {
   "name": "@kaivanwong/eslint-config-react",
   "version": "0.13.0-beta.10",
-  "description": "",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/kaivanwong/)",
+  "description": "Kaivanwong's ESLint config presets",
+  "author": "Kaivan Wong <kaivanwong@outlook.com>",
   "license": "MIT",
-  "homepage": "https://github.com/kaivanwong/eslint-config",
+  "homepage": "https://github.com/kaivanwong/kaivanwong.me#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kaivanwong/kaivanwong.me.git"
+  },
+  "bugs": {
+    "url": "https://github.com/kaivanwong/kaivanwong.me/issues"
+  },
   "keywords": [
     "eslint-config"
   ],
