--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@kaivanwong/eslint-config": "*",
     "bumpp": "^8.2.1",
-    "eslint": "^8.34.0"
+    "eslint": "^8.34.0",
+    "eslint-plugin-antfu": "0.35.2",
+    "typescript": "^4.9.5"
   }
 }
