--- a/packages/eslint-config-react/package.json
+++ b/packages/eslint-config-react/package.json
@@ -29,11 +29,10 @@
     "@kaivanwong/eslint-config-base": "workspace:*",
     "@kaivanwong/eslint-config-ts": "workspace:*",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "local-pkg": "^0.4.3"
   },
   "devDependencies": {
-    "eslint": "^8.33.0",
-    "react": "^18.2.0",
-    "typescript": "^4.9.5"
+    "eslint": "^8.33.0"
   }
 }
