--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@kaivanwong/eslint-config-vue": "workspace:*",
     "@kaivanwong/eslint-config-react": "workspace:*",
+    "@kaivanwong/eslint-config-nest": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
