--- a/packages/eslint-config-nest/package.json
+++ b/packages/eslint-config-nest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kaivanwong/eslint-config-nest",
-  "version": "0.13.13",
+  "version": "0.13.14-beta.0",
   "description": "Kaivanwong's ESLint config presets",
   "author": "Kaivan Wong <kaivanwong@outlook.com>",
   "license": "MIT",
